--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ additional_links:
 # about_title: About Me
 about_profile_image: images/pro.jpg
 about_content: | # this will include new lines to allow paragraphs
-  안녕하세요 저는 백엔드개발자를 지망하는 사람입니다.
+  안녕하세요 저는 백엔드개발자를 지망하는 부산대학교에 재학중인 박정우입니다.
 
   I am most skilled in: <mark> langchain </mark> and <mark> fastapi </mark>
 
@@ -57,7 +57,7 @@ content:
     layout: list # Type of content section (list/text)
     content:
       - layout: top-middle
-        title: 생성형 인공지능을 활용한 능동형 POS 시스템과 서비스 방법 특허 출원
+        title:인공지능을 활용한 능동형 POS 시스템과 서비스 방법 특허 출원
         #link: github.com/sproogen
         # link_text: Project Website
         #additional_links:
@@ -96,7 +96,7 @@ content:
         #quote: >
           #Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
         description: | # this will include new lines to allow paragraphs
-          부산대학교에서 자료구조,알고리즘,운영체제,컴퓨터구조,시스템 소프트웨어,c++,ai 프로그래밍등 여러 computer science 과목들과 실습과목들을 수강함
+          부산대학교에서 자료구조,알고리즘,운영체제,컴퓨터구조,시스템 소프트웨어,c++,ai 프로그래밍등 여러 computer science 과목들과 실습과목들을 수강하고 그에 대해 공부하였습니다.
 
   #- title: A Little More About Me
    # layout: text
