--- a/_config.yml
+++ b/_config.yml
@@ -16,13 +16,13 @@ darkmode: false
 
 # Social links
 #twitter_username: facespics
-github_username:  doubleclip
+github_username:  doubleclip118
 # stackoverflow_username: "00000001"
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
 #instagram_username: jameswgrant
-linkedin_username: jameswgrant
+#linkedin_username: jameswgrant
 # xing_username: jekyll
 # pinterest_username: jekyll
 #youtube_username: globalmtb
@@ -31,9 +31,9 @@ linkedin_username: jameswgrant
 
 # Additional icon links
 additional_links:
-- title: itsgoingto.be
+- title: 공부사이트
   icon: fas fa-globe
-  url: https://www.itsgoingto.be
+  url: https://doubleclip.tistory.com/
 # - title: another link
 #   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&m=free)
 #   url: Link url (eg. https://google.com)
